--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Hexo Site
+name: Build and Deploy
 
 on: [push]
 
@@ -6,28 +6,21 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
+      - name: Checkout  🛎️
         uses: actions/checkout@v2
         with:
           persist-credentials: false
 
-      - name: Setup Node.js 🔧
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
-
-      - name: Install Hexo Dependencies 📦
+      - name: Install and Build  🔧
         run: |
-          npm install hexo-cli -g
           npm install
+          npm run build
+        env:
+          CI: false
 
-      - name: Generate Static Files 🏗️
-        run: hexo generate
-
-      - name: Deploy to GitHub Pages 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Deploy  🚀
+        uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages  # 推荐部署到gh-pages分支
-          FOLDER: public    # Hexo默认生成目录
-          CLEAN: true       # 部署前清理目标分支
+          BRANCH: main
+          FOLDER: public
